<resources>
    <string name="app_name">Learn App</string>
    <string name="textsplash1">You Have to Be</string>
    <string name="textsplash2">Expert!</string>
    <string name="splashlogo">Logo Splash</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_webcategory">Web</string>
    <string name="txt_modules">10 Modules</string>
    <string name="txt_mobilecategory">" Mobile"</string>
    <string name="txt_uiuxcategory">UI/UX</string>
    <string name="txt_diniyahcategory">Diniyah</string>
    <string name="txt_bkcategory">BK</string>
    <string name="titl_newesttask">NEWEST TASK</string>
    <string name="titl_category">CATEGORY</string>
    <string name="home">Home</string>
    <string name="rank">Ranking</string>
    <string name="accounts">Account</string>

    <string name="onboarding_slide1_title">Improving the quality of learning</string>
    <string name="onboarding_slide2_title">Learn to manage tasks and keeps the focus</string>
    <string name="onboarding_slide3_title">Login to your account</string>

    <string name="onboarding_slide1_desc">Increase your effectiveness and quality for the better.</string>
    <string name="onboarding_slide2_desc">Plan your learning activities and manage your tasks well.</string>
    <string name="onboarding_slide3_desc">Plan your learning activities and manage your tasks well.</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="get_started">Get started</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="titl_beststudent">BEST STUDENTS</string>
    <string name="titl_topstudent">TOP STUDENTS</string>
    <string name="titl_about_app">"The application is in the form of repetition of material or can be said to have the same features as the application with Google Classroom, and this murojaah application is devoted to IT schools such as IDN. /n
        An example of an application flow is if a teacher has online materials or documents in the form of lessons (IT, Diniyah, etc.) that can be displayed or uploaded to the muroja'ah application. For example, a month will study material in the form of IT,/n
        which in the first week will learn basic Kotlin, then in the second week will learn Kotlin fundamentals (mvvm, mvp), then in the third week will learn (data binding), and in the last week will learn (dependency injection). /n
        The material provided is in the form of online material so that in the second week the material from the first week (kotlin basic) will be uploaded/already available in the 'first-week’ material list application. /n
        Then also, when it is in the third week, the materials in the second and first weeks are available on the list of materials. The main function of this muroja'ah application is to make students become ambitious and passionate about studying IT, Diniyah, English, etc. /n
        In this way, if a student is active in reviewing the material again and is consistent and punctual in doing the given task, the application will give points (could be in the form of points for additional grades or the like/could be in the form of rewards) to students who are active in learning, /n
        especially in reviewing material. given by the teacher and active/consistent in collecting assignments. With additional points, a student will compete to maintain his knowledge and can always remember the material that has been given. /n
        The application will track users every time they open the previous material and how active they are in learning. The points in question can be in the form of additional points, or certificates, or can also be adjusted to the wishes of the school."</string>
    <string name="btn_account">btn_account</string>
    <string name="imagebutton">imagebutton</string>
    <string name="titl_label">Android</string>
    <string name="titl_date">26 Agust 2021</string>
    <string name="titl_module">Android Development : Retrofit With Kotlin</string>
    <string name="imageview">imageview</string>
    <string name="titl_linkmodule">Link Module :</string>
    <string name="search">search here</string>
    <string name="edit_account">EDIT ACCOUNT</string>
    <string name="setting">Setting</string>
    <string name="about_app">About App</string>
    <string name="bookmark_modules">Bookmark Modules</string>
    <string name="favorite_students">Favorite Students</string>
    <string name="enable_dark_mode">Enable dark mode</string>
    <string name="log_out">Log Out</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="welcome_txt">Make sure you get login access from the admin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="see_more">see more</string>
    <string name="description">Description</string>
    <string name="your_project">Your Project :</string>
    <string name="like">LIKE</string>
    <string name="appname">Dy-Fun!</string>
    <string name="assigment_task">ASSIGMENT TASK :</string>
    <string name="desc">Description :</string>
    <string name="error_task_cancelled">Task Canceled</string>
    <string name="error_failed_pick_gallery_image">Failed to pick gallery image</string>
    <string name="image_picker_provider_authority_suffix">.imagepicker.provider.</string>
    <string name="error_failed_to_compress_image">Error Failed to Compress Image</string>
    <string name="my_name">Siti Aisyah K.H</string>
    <string name="desc_profile">Hey, I\'m Junior UI/UX Designer and also Junior Android Developer. I love ui/ux so much. Please Support me to keeps Growing. Thank You,..</string>

    <string-array name="lable_web_modules">
        <item>WEB - FIRYAL</item>
        <item>WEB - FIRYAL</item>
        <item>WEB - FIRYAL</item>
        <item>WEB - FIRYAL</item>
        <item>WEB - FIRYAL</item>
    </string-array>
    <string-array name="category_web_modules">
        <item>WEB</item>
        <item>WEB</item>
        <item>WEB</item>
        <item>WEB</item>
        <item>WEB</item>
    </string-array>
    <string-array name="date_web_modules">
        <item>26 Aug</item>
        <item>6 Sep</item>
        <item>16 Sep</item>
        <item>26 Sep</item>
        <item>4 Oct</item>
    </string-array>
    <string-array name="title_web_modules">
        <item>The Basics of Laravel 8</item>
        <item>Advance Laravel</item>
        <item>Building RESTful APIs in Laravel</item>
        <item>Building Laravel and Vue.js Web Apps</item>
        <item>Validation</item>
    </string-array>
    <string-array name="decription_web_modules">
        <item>APIs serve as a bridge between different applications or systems, allowing us to efficiently share our data with the world. REST, an architectural style that defines how to build APIs, is popular, modern, and lightweight. /n
            In this course, discover how to create a RESTful API of your own. Join instructor Zuzana Kunckova as she demonstrates how to build a RESTful API using Laravel, the popular PHP framework. /n
            Learn how to set up your application, including how to create the database structure and set up RESTful API routes. Discover how to build your RESTful API and save, display, update, and delete resources Plus, explore how to use Postman to test your API and ensure that it works as expected.</item>
        <item>Laravel is one of today most popular PHP frameworks for building elegant applications. In this course, learn how to get the most out of Laravel when working with controllers, routes, views, and the Eloquent ORM. /n
            Instructor Justin Yost steps through how to build a new Laravel application, exploring a variety of features along the way that you can leverage to work smarter with the framework. /n
            Get advanced tips for iterating a collection, working with the Blade templating engine, building middleware, and more.</item>
        <item>APIs serve as a bridge between different applications or systems, allowing us to efficiently share our data with the world. REST, an architectural style that defines how to build APIs, is popular, modern, and lightweight. /n
            In this course, discover how to create a RESTful API of your own. Join instructor Zuzana Kunckova as she demonstrates how to build a RESTful API using Laravel, the popular PHP framework. Learn how to set up your application, including how to create the database structure and set up RESTful API routes. /n
            Discover how to build your RESTful API and save, display, update, and delete resources Plus, explore how to use Postman to test your API and ensure that it works as expected.</item>
        <item>Vue.js ships with Laravel, the hugely popular PHP web framework. But using this front-end framework along with Laravel to build full-stack web applications comes with its own set of challenges. /n
            In this project-based course, instructor Michael Sullivan steps through how to work with Vue.js and Laravel to create elegant, real-world apps. /n
            As he shows how to build a content management tool for a restaurant menu, Michael demonstrates how to scaffold an authentication system, build an embedded SPA with Vue Router, manage state complexity using Vuex, and more.</item>
        <item>Laravel is the most popular MVC framework for PHP. It builds on PHP standards and conventions, making it easy to create completely customizable, full-featured apps. /n
            In this course—the second installment in the Laravel 6 Essential Training series, instructor Justin Yost continues to cover the essentials of working with Laravel 6 as he demonstrates how to build a basic Laravel application to manage a hotel reservation system. /n
            Justin explains how to run console commands, add the ability to save images, work with the Laravel service container, write tests in Laravel, write and send emails using your app, and manage user authentication. These videos provide the information you need to make a move to Laravel and build high-quality, scalable, and sound PHP applications.</item>
    </string-array>
    <array name="image_web_modules">
        <item>@drawable/img_weblist</item>
        <item>@drawable/imgw2</item>
        <item>@drawable/imgw3</item>
        <item>@drawable/imgw4</item>
        <item>@drawable/imgw5</item>
    </array>

    //List Task
    <string-array name="category_task">
        <item>WEB</item>
        <item>UI/UX</item>
        <item>MOBILE</item>
        <item>DINIYAH</item>
        <item>DNIYAH</item>
    </string-array>
    <string-array name="title_task">
        <item>Build Database Library</item>
        <item>Design Wireframe Login</item>
        <item>Retrofit With Kotlin</item>
        <item>Design Poster Al-Fatihah</item>
        <item>Microblog Adab</item>
    </string-array>
    <string-array name="time_task">
        <item>16 hours</item>
        <item>1 days</item>
        <item>2 days</item>
        <item>Overdue</item>
        <item>Overdue</item>
    </string-array>
    <array name="image_task">
        <item>@drawable/img_weblist</item>
        <item>@drawable/imgw2</item>
        <item>@drawable/imgw3</item>
        <item>@drawable/imgw4</item>
        <item>@drawable/imgw5</item>
    </array>

</resources>