<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashScreen">

    <ImageView
        android:id="@+id/logoSplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logosplash"
        android:contentDescription="@string/splashlogo" />

    <TextView
        android:id="@+id/txt_splash1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/textsplash1"
        android:textColor="#676161"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txt_splash2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/textsplash2"
        android:textColor="#2F80ED"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_splash1"
        app:layout_constraintStart_toEndOf="@+id/txt_splash1" />

</androidx.constraintlayout.widget.ConstraintLayout>