<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/illust_onboarding3"
        android:contentDescription="@string/imageview" />

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="@dimen/_300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_32dp"
        android:fontFamily="@font/montserrat_bold"
        android:letterSpacing="0.002"
        android:text="@string/onboarding_slide3_title"
        android:textColor="@color/titleTextColor"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img" />

    <TextView
        android:id="@+id/descTV"
        android:layout_width="@dimen/_300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:fontFamily="@font/montserrat_medium"
        android:letterSpacing="0.02"
        android:text="@string/onboarding_slide3_desc"
        android:textColor="@color/titleTextColor"
        android:textSize="@dimen/_14sp"
        app:layout_constraintStart_toStartOf="@+id/titleTv"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />

</androidx.constraintlayout.widget.ConstraintLayout>