<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".onboarding.OnBoardingActivity">
    
    <androidx.viewpager.widget.ViewPager
        android:id="@+id/slider"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"/>

    <LinearLayout
        android:id="@+id/dotslayout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_24dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/nextBtn"
        android:layout_width="@dimen/_180dp"
        android:layout_height="@dimen/_70dp"
        android:background="@drawable/btn_onboarding_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/imagebutton" />

    <ImageButton
        android:id="@+id/startBtn"
        android:layout_width="@dimen/_180dp"
        android:layout_height="@dimen/_70dp"
        android:background="@drawable/btn_started"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/imageview" />

    <Button
        android:id="@+id/skipBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_8dp"
        android:background="@android:color/transparent"
        android:text="@string/skip"
        android:fontFamily="@font/montserrat_medium"
        android:textSize="14sp"
        android:textColor="@color/titleTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nextBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nextBtn"/>


</androidx.constraintlayout.widget.ConstraintLayout>