<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.fragment.StudentFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/titl_beststudents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/montserrat_bold"
            android:letterSpacing="0.02"
            android:text="@string/titl_beststudent"
            android:textColor="@color/titleTextColor"
            android:textSize="@dimen/_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16dp"
            android:text="@string/see_more"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="@dimen/_12sp"
            android:textColor="@color/blue"
            app:layout_constraintBottom_toBottomOf="@+id/titl_beststudents"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/titl_beststudents" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_beststudents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="4"
            tools:listitem="@layout/item_students"
            android:layout_marginTop="@dimen/_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titl_beststudents" />

        <TextView
            android:id="@+id/titl_topstudents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24dp"
            android:fontFamily="@font/montserrat_bold"
            android:letterSpacing="0.02"
            android:text="@string/titl_topstudent"
            android:textColor="@color/titleTextColor"
            android:textSize="@dimen/_18sp"
            app:layout_constraintStart_toStartOf="@+id/titl_beststudents"
            app:layout_constraintTop_toBottomOf="@+id/rv_beststudents" />

        <TextView
            android:id="@+id/tv_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_16dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/see_more"
            android:textColor="@color/blue"
            android:textSize="@dimen/_12sp"
            app:layout_constraintBottom_toBottomOf="@+id/titl_topstudents"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/titl_topstudents"
            tools:ignore="DuplicateIds" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_topstudents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titl_topstudents" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>