<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".student.DetailStudentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_student"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/_16dp"
        app:carbon_elevation="@dimen/_24dp"
        app:navigationIcon="@drawable/ic_back"
        app:title="Student Profile"
        android:layout_gravity="center"
        app:titleTextAppearance="@style/ToolbarAppearance"
        app:titleTextColor="@color/titleTextColor" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_12dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_detail_student"
            android:layout_width="@dimen/_160dp"
            android:layout_height="@dimen/_160dp"
            android:layout_marginTop="@dimen/_80dp"
            android:src="@drawable/img_profile"
            android:layout_gravity="center"/>

        <LinearLayout
            android:id="@+id/ll_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/_20dp">

            <TextView
                android:id="@+id/tv_detail_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:fontFamily="@font/montserrat_bold"
                android:textAlignment="center"
                android:textColor="@color/titleTextColor"
                android:letterSpacing="0.02"
                android:textSize="@dimen/_20sp"/>

            <ImageButton
                android:id="@+id/btn_point"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_point_home"
                android:background="@android:color/transparent"
                android:layout_marginStart="@dimen/_12dp"
                android:contentDescription="@string/imagebutton" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_like"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/_8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_like"
                android:background="@android:color/transparent"
                android:contentDescription="@string/imageview" />

            <TextView
                android:id="@+id/tv_detail_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="165"
                android:fontFamily="@font/montserrat_semi_bold"
                android:textAlignment="center"
                android:textColor="@android:color/holo_red_light"
                android:letterSpacing="0.02"
                android:textSize="@dimen/_14sp"
                android:layout_marginStart="@dimen/_8dp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_detail_desc_student"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_65dp"
            android:textSize="@dimen/_12sp"
            android:text="@string/description"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginEnd="@dimen/_24dp"
            android:textAlignment="center"
            android:maxLines="3"
            android:letterSpacing="0.02"
            android:textColor="@color/descTextColor"
            android:fontFamily="@font/montserrat_medium"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_project"
            android:fontFamily="@font/montserrat_semi_bold"
            android:textSize="@dimen/_18sp"
            android:textColor="@color/titleTextColor"
            android:layout_gravity="center"
            android:letterSpacing="0.02"/>

        <LinearLayout
            android:id="@+id/ll_projects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/_16dp">

            <com.meetsl.scardview.SCardView
                android:id="@+id/btn_github"
                android:layout_width="@dimen/_70dp"
                android:layout_height="@dimen/_70dp"
                android:defaultFocusHighlightEnabled="true"
                app:cardBackgroundColor="@color/cardMainColor"
                app:cardCornerRadius="@dimen/_10dp"
                app:cardCornerVisibility="none"
                app:cardElevation="@dimen/_5dp"
                app:cardLightDirection="none"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="false"
                app:cardUseCornerArea="false">

                <ImageButton
                    android:layout_width="@dimen/_35dp"
                    android:layout_height="@dimen/_35dp"
                    android:layout_gravity="center"
                    android:onClick="getUrlFromGithub"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_github"
                    android:contentDescription="@string/imagebutton" />

            </com.meetsl.scardview.SCardView>

            <com.meetsl.scardview.SCardView
                android:id="@+id/btn_linkedin"
                android:layout_width="@dimen/_70dp"
                android:layout_height="@dimen/_70dp"
                android:defaultFocusHighlightEnabled="true"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginEnd="@dimen/_16dp"

                app:cardBackgroundColor="@color/cardMainColor"
                app:cardCornerRadius="@dimen/_10dp"
                app:cardCornerVisibility="none"
                app:cardElevation="@dimen/_5dp"
                app:cardLightDirection="none"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="false"
                app:cardUseCornerArea="false">

                <ImageButton
                    android:layout_width="@dimen/_35dp"
                    android:layout_height="@dimen/_35dp"
                    android:layout_gravity="center"
                    android:onClick="getUrlFromLinkedin"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_linkedin"
                    android:contentDescription="@string/imagebutton" />

            </com.meetsl.scardview.SCardView>

            <com.meetsl.scardview.SCardView
                android:id="@+id/btn_behance"
                android:layout_width="@dimen/_70dp"
                android:layout_height="@dimen/_70dp"
                android:defaultFocusHighlightEnabled="true"
                app:cardBackgroundColor="@color/cardMainColor"
                app:cardCornerRadius="@dimen/_10dp"
                app:cardCornerVisibility="none"
                app:cardElevation="@dimen/_5dp"
                app:cardLightDirection="none"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="false"
                app:cardUseCornerArea="false">

                <ImageButton
                    android:layout_width="@dimen/_35dp"
                    android:layout_height="@dimen/_35dp"
                    android:layout_gravity="center"
                    android:onClick="getUrlFromBehance"
                    android:background="@android:color/transparent"
                    android:src="@drawable/ic_behance"
                    android:contentDescription="@string/imagebutton" />

            </com.meetsl.scardview.SCardView>
        </LinearLayout>

        <carbon.widget.Button
            android:id="@+id/btn_like"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44dp"
            android:layout_marginStart="@dimen/_24dp"
            android:layout_marginTop="@dimen/_24dp"
            android:layout_marginEnd="@dimen/_24dp"
            android:background="@drawable/btn_bg"
            app:carbon_elevation="@dimen/_12dp"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center"
            android:letterSpacing="0.03"
            android:shadowColor="@color/blue"
            android:shadowRadius="100"
            android:text="@string/like"
            android:textColor="@color/white"
            app:carbon_elevationSpotShadowColor="@color/blue"
            app:elevation="@dimen/_20dp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_24dp"
            android:src="@drawable/illust_profile_student"
            android:layout_gravity="center"
            android:contentDescription="@string/imageview" />
    </LinearLayout>

    </ScrollView>

</LinearLayout>